# AIForwardDeveloperChallenge

./: DEBRIEF.md  PROJECT_PLAN.md  README.md  claude_desktop_config.json  main.py  pyproject.toml  support.py  tasks.json  test_mcp_tools  work_log.json
agentDesign/: AIAgentDeployment.md  CodeEfficiencyAgent.md  CodeReadabilityAgent.md
config/: claude_desktop_config.json
logs/: work_log.json
