[tool.poetry]
name = "mcp-server"
version = "0.1.0"
description = "Model Context Protocol Server with File Analysis"
authors = ["Your Name"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"